<resources>
    <string name="app_name">Room Task</string>

    <string name="departments">Departments</string>
    <string name="users">Users</string>

    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="create_department">Create Department</string>
    <string name="update_department">Update Department</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="done">done</string>
    <string name="details_department">Details Department</string>
    <string name="details_user">Details User</string>
    <string name="user">User</string>
    <string name="department">Department</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="rooms">Rooms</string>
    <string name="create_room">Create Room</string>
    <string name="update_room">Update Room</string>
    <string name="without_room">Without room</string>
    <string name="department_room">Department room: </string>

</resources>
